# Qt-Simple-Notepad

./: CMakeLists.txt  README.md  todo.txt
include/: FormatChecker.hpp  MainWindow.hpp  NoteTextEditor.hpp  ToolBarWidget.hpp
src/: FormatChecker.cpp  MainWindow.cpp  NoteTextEditor.cpp  ToolBarWidget.cpp  main.cpp
